legend-engine-xts-deephaven/legend-engine-xt-deephaven-pure/src/main/resources/core_deephaven_pure/executionPlan/scratch.txt
Caused by: org.finos.legend.engine.shared.javaCompiler.JavaCompileException: 1 error compiling /_pure/plan/root/Execute.java
/_pure/plan/root/Execute.java:22: error: unreported exception io.deephaven.client.impl.TableHandle.TableHandleException; must be caught or declared to be thrown
        return session.session().execute(ts);
                                        ^

/_pure/plan/root/Execute.java
0001 package _pure.plan.root;
0002 
0003 import io.deephaven.client.impl.BarrageSession;
0004 import io.deephaven.client.impl.TableHandle;
0005 import io.deephaven.qst.table.TableSpec;
0006 import io.deephaven.qst.table.TicketTable;
0007 import java.math.*;
0008 import java.util.*;
0009 import java.util.function.*;
0010 import java.util.stream.*;
0011 import org.finos.legend.engine.plan.dependencies.domain.date.DayOfWeek;
0012 import org.finos.legend.engine.plan.dependencies.domain.date.DurationUnit;
0013 import org.finos.legend.engine.plan.dependencies.domain.date.PureDate;
0014 import org.finos.legend.engine.plan.dependencies.util.Library;
0015 
0016 public class Execute
0017 {
0018     public static TableHandle execute(BarrageSession session)
0019     {
0020         TableSpec ts = TicketTable.fromQueryScopeField("nds_desktops");
0021         ts.select("Desktop_ID", "City_Name", "Desktop_Name");
0022         return session.session().execute(ts);
0023     }
